unpackaged/main/default/objects/Service_schedule__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <formula>Service__r.Account__r.Retention__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention</label>
    <type>Checkbox</type>
</CustomField>