unpackaged/main/default/objects/Service_schedule__c/fields/Sent_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval_Date__c</fullName>
    <label>Sent for Approval Date</label>
    <type>Date</type>
</CustomField>