unpackaged/main/default/objects/Service_schedule__c/fields/SEO_Front_Conversation_Link__c.field-meta.xml
<CustomField>
    <fullName>SEO_Front_Conversation_Link__c</fullName>
    <formula>Service__r.Account__r.SEO_Front_Conversation_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEO Front Conversation Link</label>
    <type>Text</type>
</CustomField>