unpackaged/main/default/objects/Service_schedule__c/fields/SEO_Specialist__c.field-meta.xml
<CustomField>
    <fullName>SEO_Specialist__c</fullName>
    <formula>Service__r.Account__r.SEO_Specialist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEO Specialist</label>
    <type>Text</type>
</CustomField>