unpackaged/main/default/objects/Service_schedule__c/fields/Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>Service_Owner__c</fullName>
    <formula>Service__r.Owner:User.FirstName &amp;&quot; &quot;&amp; Service__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Owner</label>
    <type>Text</type>
</CustomField>