unpackaged/main/default/objects/Service_schedule__c/fields/Service_Schedule_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Schedule_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Schedule 18 Digit ID</label>
    <type>Text</type>
</CustomField>