unpackaged/main/default/objects/Service_schedule__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <formula>TEXT( Service__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Status</label>
    <type>Text</type>
</CustomField>