unpackaged/main/default/objects/Service_schedule__c/fields/Social_Media_Manager__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Media Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules3</relationshipName>
    <type>Lookup</type>
</CustomField>