unpackaged/main/default/objects/Service_schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Questionnaire</fullName>
            </value>
            <value>
                <fullName>Ready for Assigning</fullName>
            </value>
            <value>
                <fullName>PMS Buildout</fullName>
            </value>
            <value>
                <fullName>Ad Buildout</fullName>
            </value>
            <value>
                <fullName>Inbox</fullName>
            </value>
            <value>
                <fullName>Creating Content</fullName>
            </value>
            <value>
                <fullName>Waiting on CSM</fullName>
            </value>
            <value>
                <fullName>Adding Photos</fullName>
            </value>
            <value>
                <fullName>Ready for Launch</fullName>
            </value>
            <value>
                <fullName>Create Content</fullName>
            </value>
            <value>
                <fullName>Photos added</fullName>
            </value>
            <value>
                <fullName>Edit Content</fullName>
            </value>
            <value>
                <fullName>Final QA</fullName>
            </value>
            <value>
                <fullName>Ready for Client Review</fullName>
            </value>
            <value>
                <fullName>Strategist Review</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Sent for Client Approval</fullName>
            </value>
            <value>
                <fullName>Revisions Requested</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
                <label>Live/Scheduled</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Meeting Held</fullName>
            </value>
            <value>
                <fullName>No Meeting Held</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>