unpackaged/main/default/objects/Service_schedule__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <label>Status Duration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>