unpackaged/main/default/objects/Service_schedule__c/fields/Status_moved_by_automation__c.field-meta.xml
<CustomField>
    <fullName>Status_moved_by_automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status moved by automation</label>
    <type>Checkbox</type>
</CustomField>