unpackaged/main/default/objects/Service_schedule__c/fields/Submission_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Due_date__c</fullName>
    <inlineHelpText>Internal due date</inlineHelpText>
    <label>Submission Due date</label>
    <type>Date</type>
</CustomField>