unpackaged/main/default/objects/Service_schedule__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <formula>Service__r.Subscription_start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>