unpackaged/main/default/objects/Service_schedule__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>