unpackaged/main/default/objects/Service_schedule__c/fields/Tech_Touch__c.field-meta.xml
<CustomField>
    <fullName>Tech_Touch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Touch</label>
    <type>Checkbox</type>
</CustomField>