unpackaged/main/default/objects/Service_schedule__c/fields/Templates__c.field-meta.xml
<CustomField>
    <fullName>Templates__c</fullName>
    <formula>Service__r.Templates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canva Templates</label>
    <type>Text</type>
</CustomField>