unpackaged/main/default/objects/Service_schedule__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>