unpackaged/main/default/objects/Service_schedule__c/fields/Tier_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan__c</fullName>
    <formula>Service__r.Tier_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Plan</label>
    <type>Text</type>
</CustomField>