unpackaged/main/default/objects/Service_schedule__c/fields/Time_Between_Stage__c.field-meta.xml
<CustomField>
    <fullName>Time_Between_Stage__c</fullName>
    <label>Time Between Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>