unpackaged/main/default/objects/Service_schedule__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twitter</label>
    <type>Checkbox</type>
</CustomField>