unpackaged/main/default/objects/Service_schedule__c/fields/VA_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>VA_Team_Lead__c</fullName>
    <formula>Service__r.Assigned_PM_VA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VA Team Lead</label>
    <type>Text</type>
</CustomField>