unpackaged/main/default/objects/Service_schedule__c/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <formula>Service__r.Account__r.VIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>