unpackaged/main/default/objects/Service_schedule__c/fields/Website_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain__c</fullName>
    <formula>Service__r.Website_Domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Domain</label>
    <type>Text</type>
</CustomField>