unpackaged/main/default/objects/Service_schedule__c/fields/Writer2__c.field-meta.xml
<CustomField>
    <fullName>Writer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Writer2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules10</relationshipName>
    <type>Lookup</type>
</CustomField>