unpackaged/main/default/objects/Service_schedule__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <formula>Service__r.Writer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Writer</label>
    <type>Text</type>
</CustomField>