unpackaged/main/default/objects/Service_schedule__c/fields/Writer_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Writer_s_Notes__c</fullName>
    <description>Case Number: 00012151</description>
    <formula>Service__r.Writer_s_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Writer&#39;s Notes</label>
    <type>Checkbox</type>
</CustomField>