unpackaged/main/default/objects/Service_schedule__c/recordTypes/Blogs_per_Quarter.recordType-meta.xml
<RecordType>
    <fullName>Blogs_per_Quarter</fullName>
    <active>true</active>
    <label>Blogs</label>
</RecordType>