unpackaged/main/default/objects/Service_schedule__c/recordTypes/GBP_Posts.recordType-meta.xml
<RecordType>
    <fullName>GBP_Posts</fullName>
    <active>true</active>
    <label>GBP Posts</label>
</RecordType>