unpackaged/main/default/objects/Service_schedule__c/recordTypes/Monthly_and_Quarterly_Reporting.recordType-meta.xml
<RecordType>
    <fullName>Monthly_and_Quarterly_Reporting</fullName>
    <active>true</active>
    <label>Monthly and Quarterly Reporting</label>
</RecordType>