unpackaged/main/default/objects/Service_schedule__c/recordTypes/Pages_of_Copywriting.recordType-meta.xml
<RecordType>
    <fullName>Pages_of_Copywriting</fullName>
    <active>true</active>
    <label>Pages of Copywriting</label>
</RecordType>