unpackaged/main/default/objects/Service_schedule__c/recordTypes/Paid_Media.recordType-meta.xml
<RecordType>
    <fullName>Paid_Media</fullName>
    <active>true</active>
    <label>Paid Media</label>
</RecordType>