unpackaged/main/default/objects/Service_schedule__c/recordTypes/SEO_Optimizations.recordType-meta.xml
<RecordType>
    <fullName>SEO_Optimizations</fullName>
    <active>true</active>
    <label>SEO Optimizations</label>
</RecordType>