unpackaged/main/default/objects/Service_schedule__c/validationRules/AD_Buildout_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>AD_Buildout_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
 RecordType.Name = &quot;Paid Media&quot;,
  Ad_Buildout_Approved__c = False,
OR( 
ispickval (  Status__c , &quot;Client Review&quot;),
ispickval (  Status__c , &quot;Ready for Launch&quot;),
 ispickval (  Status__c , &quot;Live&quot;)))</errorConditionFormula>
    <errorMessage>Submit for approval to change status.</errorMessage>
</ValidationRule>