unpackaged/main/default/objects/Service_schedule__c/validationRules/FinalQA.validationRule-meta.xml
<ValidationRule>
    <fullName>FinalQA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 Final_QA__c =! true,
 ISPICKVAL(Status__c , &quot;Ready for Launch&quot;), 
 RecordType.Name = &quot;Paid Media&quot;

)</errorConditionFormula>
    <errorDisplayField>Final_QA__c</errorDisplayField>
    <errorMessage>To change status to &quot;Ready to Launch&quot; make sure is the Fina QA</errorMessage>
</ValidationRule>