unpackaged/main/default/objects/Service_schedule__c/validationRules/Meeting_Contact_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Contact_Blank</fullName>
    <active>true</active>
    <description>User should fill in the meeting contact field before moving SS status to Meeting Held</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Meeting Held&quot;),
ISBLANK(Meeting_Contact__c)
)</errorConditionFormula>
    <errorMessage>Add the meeting contact</errorMessage>
</ValidationRule>