unpackaged/main/default/objects/Service_schedule__c/validationRules/PM_Quality_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>PM_Quality_Score</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.Name = &quot;Paid Media&quot;,
 ISPICKVAL(PM_Quality_Score__c , &quot;&quot;),
 ISPICKVAL ( Status__c , &quot;Live&quot;)
)</errorConditionFormula>
    <errorDisplayField>PM_Quality_Score__c</errorDisplayField>
    <errorMessage>Select a PM Quality Score.</errorMessage>
</ValidationRule>