unpackaged/main/default/objects/Service_schedule__c/validationRules/PMS_Buildout_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PMS_Buildout_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
  RecordType.Name = &quot;Paid Media&quot;,
Paid_Media_Specialist__c = &quot;&quot;,
OR( ispickval (  Status__c , &quot;PMS Buildout&quot;),
 ispickval (  Status__c , &quot;AD Buildout&quot;),
ispickval (  Status__c , &quot;Client Review&quot;),
ispickval (  Status__c , &quot;Ready for Launch&quot;),
 ispickval (  Status__c , &quot;Live&quot;)))</errorConditionFormula>
    <errorDisplayField>Paid_Media_Specialist__c</errorDisplayField>
    <errorMessage>Please select a Paid Media Specialist.</errorMessage>
</ValidationRule>