unpackaged/main/default/objects/Service_schedule__c/validationRules/Social_Media_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Media_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
RecordType.Name = &quot;Social Media&quot;,
Client_Review_Approved__c = False,
ISCHANGED( Status__c ),
ISPICKVAL(PRIORVALUE( Status__c ),&#39;Client Review&#39;) )</errorConditionFormula>
    <errorMessage>Submit for approval to change status.</errorMessage>
</ValidationRule>