unpackaged/main/default/objects/Service_schedule__c/validationRules/Status_LiveScheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_LiveScheduled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Live&quot;),
PDF_of_Content_Published_Uploaded__c = false,
 RecordType.Name = &quot;Social Media&quot;
)</errorConditionFormula>
    <errorMessage>Status cannot change to Live/Scheduled if “PDF of Content Published Uploaded” is unchecked</errorMessage>
</ValidationRule>