unpackaged/main/default/objects/Service_schedule__c/listViews/Ads_by_Stage.listView-meta.xml
<ListView>
    <fullName>Ads_by_Stage</fullName>
    <columns>test__c</columns>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Content_Manager__c</columns>
    <columns>Content_Associate__c</columns>
    <columns>Writer2__c</columns>
    <columns>Editor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Paid_Media</value>
    </filters>
    <label>Ads by Stage</label>
</ListView>