unpackaged/main/default/objects/Service_schedule__c/listViews/All_Lead_Generation_Service_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Lead_Generation_Service_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Service_Owner__c</columns>
    <columns>Content_Creator__c</columns>
    <columns>Service__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Paid_Media</value>
    </filters>
    <label>All Lead Generation Service Schedules</label>
</ListView>