unpackaged/main/default/objects/Service_schedule__c/listViews/All_Paid_Media_Clients.listView-meta.xml
<ListView>
    <fullName>All_Paid_Media_Clients</fullName>
    <columns>NAME</columns>
    <columns>Service_Owner__c</columns>
    <columns>Content_Creator__c</columns>
    <columns>Service__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Paid_Media</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>All Paid Media Clients - SS</label>
</ListView>