unpackaged/main/default/objects/Service_schedule__c/listViews/Alyssa_s_Example.listView-meta.xml
<ListView>
    <fullName>Alyssa_s_Example</fullName>
    <columns>Duplicate__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Account_Manager_Linked__c</columns>
    <columns>Content_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Blogs_per_Quarter</value>
    </filters>
    <label>Alyssa&#39;s Example</label>
</ListView>