unpackaged/main/default/objects/Service_schedule__c/listViews/AM_View_Social_Media.listView-meta.xml
<ListView>
    <fullName>AM_View_Social_Media</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>Content_Creator__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Social_Media</value>
    </filters>
    <label>AM View - Social Media</label>
</ListView>