unpackaged/main/default/objects/Service_schedule__c/listViews/April_Blog_Audit.listView-meta.xml
<ListView>
    <fullName>April_Blog_Audit</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Content_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Blogs_per_Quarter</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Final QA</value>
    </filters>
    <label>April Blog Audit</label>
    <sharedTo>
        <role>Superuser</role>
    </sharedTo>
</ListView>