unpackaged/main/default/objects/Service_schedule__c/listViews/Blog_Content_Due_Dennywrites.listView-meta.xml
<ListView>
    <fullName>Blog_Content_Due_Dennywrites</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Google_document_link__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Content_Manager__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Owner__c</field>
        <operation>contains</operation>
        <value>Andrea</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>12/1/2022</value>
    </filters>
    <label>Blog Content Due - Dennywrites</label>
</ListView>