unpackaged/main/default/objects/Service_schedule__c/listViews/Blogs_Approved_Ready_to_Postv2.listView-meta.xml
<ListView>
    <fullName>Blogs_Approved_Ready_to_Postv2</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Service__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Duplicate__c</columns>
    <columns>Preferred_Posted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Blogs_per_Quarter</value>
    </filters>
    <filters>
        <field>Duplicate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Preferred_Posted_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Blogs Approved &amp; Ready to Post V2</label>
</ListView>