unpackaged/main/default/objects/Service_schedule__c/listViews/Blogs_Assigned_to_Dennywrites.listView-meta.xml
<ListView>
    <fullName>Blogs_Assigned_to_Dennywrites</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Writer2__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Blogs_per_Quarter</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Create Content</value>
    </filters>
    <filters>
        <field>Service_Owner__c</field>
        <operation>contains</operation>
        <value>Angela,Charlene</value>
    </filters>
    <label>Blogs Assigned to Dennywrites</label>
</ListView>