unpackaged/main/default/objects/Service_schedule__c/listViews/Blogs_per_Editor.listView-meta.xml
<ListView>
    <fullName>Blogs_per_Editor</fullName>
    <columns>test__c</columns>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Content_Manager__c</columns>
    <columns>Content_Associate__c</columns>
    <columns>Writer2__c</columns>
    <columns>Editor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_schedule__c.Blogs_per_Quarter</value>
    </filters>
    <filters>
        <field>Editor__c</field>
        <operation>equals</operation>
        <value>Isabel Bravo</value>
    </filters>
    <label>Blogs per Editor</label>
</ListView>